2023-05-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-tramp-file-name): Keep hop while in file
	name completion.

	* tramp-sh.el (tramp-sh-handle-process-file): Set `env' explicitly.
	(tramp-barf-if-no-shell-prompt): Still add optional trailing
	`ansi-color-control-seq-regexp'.

2023-05-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-dissect-file-name): Revert last change.
	(tramp-handle-file-name-as-directory)
	(tramp-handle-file-name-directory): Let-bind
	`tramp-default-proxies-alist'.

2023-05-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-fuse.el (tramp-fuse-mount-point):
	* tramp-sh.el (tramp-ssh-controlmaster-options):
	Use `small-temporary-file-directory'.

2023-05-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-terminal-type): Fix docstring.
	(tramp-process-one-action): Delete ANSI control escape sequences
	in buffer.  (Bug#63539)

	* tramp-sh.el (tramp-barf-if-no-shell-prompt):
	Remove `ansi-color-control-seq-regexp'.

2023-05-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-dissect-file-name): Set hop to nil if NODEFAULT.
	(Bug#63578)

	* tramp-fuse.el (tramp-fuse-mount-point, tramp-fuse-mounted-p):
	Support existing mount points.

2023-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (ansi-color): Require.

	* tramp.el (tramp-shell-prompt-pattern): Remove escape characters.
	(tramp-process-one-action, tramp-convert-file-attributes):
	Use `ansi-color-control-seq-regexp'.  (Bug#63539)

	* tramp-sh.el (tramp-display-escape-sequence-regexp)
	(tramp-device-escape-sequence-regexp): Delete.
	(tramp-sh-handle-insert-directory, tramp-barf-if-no-shell-prompt)
	(tramp-wait-for-output): Use `ansi-color-control-seq-regexp'.

2023-05-17  Mattias Engdegård  <mattiase@acm.org>

	Eliminate some mutation of program constants

	* tramp.el (tramp-handle-memory-info): Work on newly created
	objects, or use non-destructive operations.
